chore(dockerfile): change docker guide